--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/pg": "^8.15.6",
+    "@vercel/blob": "^2.0.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "next": "^16.0.8",
