--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@vercel/blob": "^2.0.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "next": "^16.0.8",
     "pg": "^8.16.3",
     "react": "19.2.0",
@@ -31,6 +33,7 @@
     "@prisma/client": "^6.19.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
